Add basis mobile ehader

--- a/client/src/app/shared/components/circular-icon-button/circular-icon-button.component.html
+++ b/client/src/app/shared/components/circular-icon-button/circular-icon-button.component.html
@@ -1,1 +1,1 @@
-<app-icon [name]="icon()" [fillIcon]="true" [color]="'grey'" />
+<app-icon [name]="icon()" [size]="iconSize()" [fillIcon]="false" [color]="'#3C3C3C'" />
