--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -17,7 +17,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
-  background-image: url('/images/background/white-3.avif');
+  /* background-image: url('/images/background/white-3.avif'); */
   background-repeat: repeat;
 }
 
