Navigate backwards on arrow left circ button

--- a/client/src/app/features/mobile-header/mobile-header.component.scss
+++ b/client/src/app/features/mobile-header/mobile-header.component.scss
@@ -8,11 +8,11 @@
 .title-container {
   display: flex;
   flex-direction: column;
+  margin-left: 0.85rem;
 }
 
 .heading {
   font-size: 1.2rem;
-  font-weight: bold;
 }
 
 .sub-heading {
