--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,10 +1,9 @@
 <app-loading-progress-bar />
-<app-header />
 <div class="outlet-wrapper">
   <app-mobile-header />
   <router-outlet />
 </div>
 
-<!-- <app-mobile-nav /> -->
+<app-mobile-nav />
 
 <app-toast />
