--- a/client/src/app/features/mobile-header/mobile-header.component.html
+++ b/client/src/app/features/mobile-header/mobile-header.component.html
@@ -1,7 +1,4 @@
-<div class="title-container">
-  <div class="heading">Heading</div>
-  <div class="sub-heading">Lorem Ipsum</div>
-</div>
+<app-circular-icon-button (clicked)="navigateToPreviousRoute()" [icon]="IconName.ArrowLeft" [iconSize]="22" />
 
 <img
   [src]="profileService.userData?.pictureUrl || '/images/profile-placeholder.webp'"
