Add new styling to mobile nav bar

--- a/client/src/app/components/mobile-nav/mobile-nav.component.html
+++ b/client/src/app/components/mobile-nav/mobile-nav.component.html
@@ -1,14 +1,14 @@
 <div class="nav-item" (click)="setActive('home')" [class.active]="activeItem === 'home'">
-  <app-icon [name]="IconName.HOME" [color]="activeItem === 'home' ? '#007bff' : '#6c757d'" [size]="26" />
+  <app-icon [name]="IconName.HOME" [color]="activeItem === 'home' ? '#eee' : '#6c757d'" [size]="26" />
   <span class="nav-label">Home</span>
 </div>
 
 <div class="nav-item" (click)="setActive('statistics')" [class.active]="activeItem === 'statistics'">
-  <app-icon [name]="IconName.BAR_CHART" [color]="activeItem === 'statistics' ? '#007bff' : '#6c757d'" [size]="26" />
+  <app-icon [name]="IconName.BAR_CHART" [color]="activeItem === 'statistics' ? '#eee' : '#6c757d'" [size]="26" />
   <span class="nav-label">Statistiken</span>
 </div>
 
 <div class="nav-item" (click)="setActive('profile')" [class.active]="activeItem === 'profile'">
-  <app-icon [name]="IconName.User" [color]="activeItem === 'profile' ? '#007bff' : '#6c757d'" [size]="26" />
+  <app-icon [name]="IconName.User" [color]="activeItem === 'profile' ? '#eee' : '#6c757d'" [size]="26" />
   <span class="nav-label">Profil</span>
 </div>
