--- a/client/src/app/features/mobile-header/mobile-header.component.scss
+++ b/client/src/app/features/mobile-header/mobile-header.component.scss
@@ -1,4 +1,8 @@
 :host {
+  position: fixed;
+  left: 5%;
+  right: 3%;
+  top: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
