--- a/client/src/app/features/training-plans/training-plans/training-plans.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.html
@@ -1,10 +1,10 @@
-<div class="container heading-container mt-4 mb-3">
+<!-- <div class="container heading-container mt-4 mb-3">
   <div class="d-flex justify-content-between align-items-center">
     <app-headline [subHeading]="'own'" [heading]="'plans'" />
 
     <app-circular-icon-button [icon]="IconName.PLUS" (clicked)="createNewPlan()" />
   </div>
-</div>
+</div> -->
 
 @if (allTrainingPlans$ | async; as allTrainingPlans) {
   <section id="gallery">
