--- a/client/src/app/features/training-plans/training-plans/training-plans.component.scss
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.scss
@@ -1,5 +1,13 @@
 :host {
-  margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.training-plan-search-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 @media screen and (max-width: 768px) {
