--- a/client/src/app/shared/components/headline/headline.component.html
+++ b/client/src/app/shared/components/headline/headline.component.html
@@ -1,8 +1,12 @@
 <div class="d-flex justify-content-between align-items-center">
-  <span>
-    @if (subHeading()) {
-      <span class="context-headline">{{ subHeading() }}</span>
-    }
-    <span class="headline">{{ heading() }}</span>
-  </span>
+  @if (!loadingService.isLoading()) {
+    <span>
+      @if (subHeading()) {
+        <span class="context-headline">{{ subHeading() }}</span>
+      }
+      <span class="headline">{{ heading() }}</span>
+    </span>
+  } @else {
+    <span class="loader"></span>
+  }
 </div>
