--- a/client/src/app/features/mobile-header/mobile-header.component.scss
+++ b/client/src/app/features/mobile-header/mobile-header.component.scss
@@ -24,6 +24,15 @@
   color: #84878a;
 }
 
+.button-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 1em;
+}
+
 .rounded-circle {
   padding: 0.5em;
   border-radius: 50%;
