--- a/client/src/app/shared/components/headline/headline.component.html
+++ b/client/src/app/shared/components/headline/headline.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between align-items-center">
-  @if (loadingService.isLoading()) {
+  @if (showSpikeLoader()) {
     <app-spike-loader />
   } @else {
     <span>
