Blur only the outlet wrapper in modal overlay

--- a/client/src/app/features/mobile-header/mobile-header.component.html
+++ b/client/src/app/features/mobile-header/mobile-header.component.html
@@ -7,9 +7,11 @@
 @if (showAlternativeButton()) {
   <app-circular-icon-button [icon]="IconName.CLOCK" [iconSize]="20" (clicked)="onCircularButtonClick()" />
 } @else {
-  <img
-    [src]="profileService.userData?.pictureUrl || '/images/profile-placeholder.webp'"
-    alt="M"
-    class="h-100 rounded-circle"
-  />
+  <div class="image-wrapper">
+    <img
+      [src]="profileService.userData?.pictureUrl || '/images/profile-placeholder.webp'"
+      alt="M"
+      class="h-100 rounded-circle"
+    />
+  </div>
 }
