--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -3,7 +3,7 @@
 } @else {
   @let mobileView = mobileDeviceDetectionService.isMobileDevice;
 
-  <form (submit)="onSubmit($event)" class="mt-4" id="form">
+  <form (submit)="onSubmit($event)" id="form">
     <table #trainingTable class="table table-striped training-table responsive-table caption-top mb-4">
       <thead>
         <tr>
