--- a/client/src/app/components/mobile-nav/mobile-nav.component.scss
+++ b/client/src/app/components/mobile-nav/mobile-nav.component.scss
@@ -13,6 +13,7 @@
   border-radius: 16px 16px 0 0;
   box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.15);
   transition: color 0.3s ease;
+  z-index: 1045;
 }
 
 .nav-item {
