--- a/client/src/app/features/mobile-header/mobile-header.component.scss
+++ b/client/src/app/features/mobile-header/mobile-header.component.scss
@@ -1,12 +1,15 @@
 :host {
   position: fixed;
-  left: 5%;
-  right: 3%;
-  top: 1rem;
+  inset: 0 0 auto 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 2.5rem;
+  height: 3.5rem;
+  padding-left: 5%;
+  padding-right: 2%;
+  background-color: rgba(240, 240, 240, 0.8);
+  backdrop-filter: blur(5px);
+  z-index: 1000;
 }
 
 .title-container {
@@ -33,7 +36,15 @@
   gap: 1em;
 }
 
-.rounded-circle {
-  padding: 0.5em;
-  border-radius: 50%;
+.image-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  height: 100%;
+  padding: 0.375em;
+
+  .rounded-circle {
+    padding: 0.5em;
+    border-radius: 50%;
+  }
 }
