--- a/client/src/app/features/training-plans/training-view/training-view.component.scss
+++ b/client/src/app/features/training-plans/training-view/training-view.component.scss
@@ -5,6 +5,10 @@
   margin-bottom: 1rem;
 }
 
+form {
+  margin-top: -2.75rem;
+}
+
 .table > :not(caption) > * > * {
   background-color: inherit;
 }
