--- a/client/src/app/shared/components/circular-icon-button/circular-icon-button.component.scss
+++ b/client/src/app/shared/components/circular-icon-button/circular-icon-button.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: grid;
   place-items: center;
-  background: #f2f2f2;
+  background: #e8e8e8;
   height: 2.25rem;
   aspect-ratio: 1;
   border-radius: 50%;
