--- a/client/src/app/features/mobile-header/mobile-header.component.scss
+++ b/client/src/app/features/mobile-header/mobile-header.component.scss
@@ -6,7 +6,7 @@
   align-items: center;
   height: 4rem;
   padding-left: 5%;
-  padding-right: 2%;
+  padding-right: 2.5%;
   background-color: rgba(240, 240, 240, 0.8);
   backdrop-filter: blur(5px);
   z-index: 1000;
@@ -41,7 +41,8 @@
   justify-content: flex-end;
   width: 100%;
   height: 100%;
-  padding: 0.375em;
+  padding: 0.625em;
+  padding-right: 0;
 
   .rounded-circle {
     padding: 0.5em;
