--- a/client/src/app/features/mobile-header/mobile-header.component.scss
+++ b/client/src/app/features/mobile-header/mobile-header.component.scss
@@ -5,8 +5,7 @@
   justify-content: space-between;
   align-items: center;
   height: 4rem;
-  padding-left: 5%;
-  padding-right: 2.5%;
+  padding-inline: 7.5%;
   background-color: rgba(240, 240, 240, 0.8);
   backdrop-filter: blur(5px);
   z-index: 1000;
@@ -47,5 +46,12 @@
   .rounded-circle {
     padding: 0.5em;
     border-radius: 50%;
+  }
+}
+
+@media screen and (max-width: 786px) {
+  :host {
+    padding-left: 5%;
+    padding-right: 3%;
   }
 }
