Turned use data into reactive signal

--- a/client/src/app/features/mobile-header/mobile-header.component.html
+++ b/client/src/app/features/mobile-header/mobile-header.component.html
@@ -11,7 +11,7 @@
 } @else {
   <div class="image-wrapper">
     <img
-      [src]="profileService.userData?.pictureUrl || '/images/profile-placeholder.webp'"
+      [src]="profileService.userData()?.pictureUrl || '/images/profile-placeholder.webp'"
       alt="M"
       class="h-100 rounded-circle"
     />
