--- a/client/src/app/features/mobile-header/mobile-header.component.html
+++ b/client/src/app/features/mobile-header/mobile-header.component.html
@@ -5,7 +5,7 @@
 />
 
 @if (currentButtonIcon() === IconName.MORE_VERTICAL) {
-  <app-more-options-button [options]="['Zurücksetzen']" (optionSelected)="onOptionSelected($event)" />
+  <app-more-options-button [options]="moreOptions" (optionSelected)="onOptionSelected($event)" />
 } @else if (currentButtonIcon()) {
   <app-circular-icon-button [icon]="currentButtonIcon()!" [iconSize]="20" (clicked)="onCircularButtonClick()" />
 } @else {
