Add search bar for trainings

--- a/client/src/app/features/training-plans/training-plans/training-plans.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.html
@@ -1,5 +1,6 @@
 @if (allTrainingPlans$ | async; as allTrainingPlans) {
   <section id="gallery">
+    <app-search-bar (searchQueryChanged)="filterTrainingPlans($event)" />
     <div class="container">
       <div class="row">
         @if (filteredTrainingPlans$ | async; as filteredTrainingPlans) {
