--- a/client/src/app/shared/components/mobile-nav/mobile-nav.component.scss
+++ b/client/src/app/shared/components/mobile-nav/mobile-nav.component.scss
@@ -14,6 +14,7 @@
   box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.15);
   transition: color 0.3s ease;
   z-index: 1045;
+  max-width: 500px;
 }
 
 .nav-item {
@@ -47,4 +48,11 @@
 
 .nav-item:hover {
   color: #007bff; /* Hover-Farbe für Icons und Text */
+}
+
+@media screen and (min-width: 786px) {
+  :host {
+    bottom: 2%;
+    border-radius: 1rem;
+  }
 }
