--- a/client/src/app/shared/components/search-bar/search-bar.component.scss
+++ b/client/src/app/shared/components/search-bar/search-bar.component.scss
@@ -4,6 +4,9 @@
   border-radius: 0.75em;
   padding-inline: 0.5em;
   width: 100%;
+  margin-bottom: 0.65rem;
+  background-color: rgba(249, 249, 249, 0.8);
+  border: 2px solid #efefef; /* Light blue border */
 }
 
 .search-input {
