--- a/client/src/app/shared/components/search-bar/search-bar.component.html
+++ b/client/src/app/shared/components/search-bar/search-bar.component.html
@@ -1,2 +1,9 @@
 <app-icon [name]="IconName.SEARCH" [size]="22" [color]="'gray'" />
-<input type="text" (input)="onInputChange($event)" placeholder="Search..." class="search-input" />
+<input
+  type="text"
+  (input)="onInputChange($event)"
+  [value]="searchQuery()"
+  placeholder="Search..."
+  class="search-input"
+/>
+<app-icon [name]="IconName.X" [size]="18" [color]="'gray'" (clicked)="clearSearch()" />
