--- a/client/src/app/features/usage-statistics/usage-statistics.component.html
+++ b/client/src/app/features/usage-statistics/usage-statistics.component.html
@@ -12,11 +12,20 @@
     @if (trainingDayNotifications$ | async; as trainingDayNotifications) {
       <app-training-day-notification [notificationsInput]="trainingDayNotifications" />
     } @else {
-      <app-spinner />
+      <main class="mt-3">
+        <app-chart-skeleton />
+        <app-chart-skeleton />
+      </main>
     }
   } @else {
-    <app-spinner />
+    <main class="mt-3">
+      <app-chart-skeleton />
+      <app-chart-skeleton />
+    </main>
   }
 } @else {
-  <app-spinner />
+  <main class="mt-3">
+    <app-chart-skeleton />
+    <app-chart-skeleton />
+  </main>
 }
