Rework header and search bar

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-loading-progress-bar />
+<app-header />
+
 <div class="outlet-wrapper">
-  <app-mobile-header />
   <router-outlet />
 </div>
 
