--- a/client/src/app/features/profile-2/profile-2.component.scss
+++ b/client/src/app/features/profile-2/profile-2.component.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   gap: 1.25rem;
   margin-top: 0.5rem;
+  background-image: url('/images/background/white-lines.webp');
 
   p {
     margin: 0;
