--- a/client/src/app/features/header/header.component.scss
+++ b/client/src/app/features/header/header.component.scss
@@ -6,7 +6,8 @@
   align-items: center;
   height: 4rem;
   padding-inline: 7.5%;
-  background-color: rgba(240, 240, 240, 0.925);
+  background: var(--off-white);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
   z-index: 1000;
 }
