--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -104,6 +104,9 @@
     @case (IconName.CHEVRON_LEFT) {
       <polyline points="15 18 9 12 15 6"></polyline>
     }
+    @case (IconName.CHEVRON_RIGHT) {
+      <polyline points="9 18 15 12 9 6"></polyline>
+    }
     @case (IconName.SEARCH) {
       <circle cx="11" cy="11" r="8"></circle>
       <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
