--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -15,6 +15,11 @@
   font-family: 'Poppins', sans-serif;
 }
 
+p {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   display: flex;
   flex-direction: column;
