Delete old gym ticket component + move to modal

--- a/client/src/app/features/gym-ticket/ticket-preview-component/ticket-preview-component.component.html
+++ b/client/src/app/features/gym-ticket/ticket-preview-component/ticket-preview-component.component.html
@@ -1,3 +1,12 @@
-<div class="image-container">
-  <img [src]="ticketImage" alt="Gym Ticket" class="ticket-image" />
-</div>
+@if (ticketImage !== NO_GYM_TICKET_AVAILABLE) {
+  <div class="upload-container" (click)="fileInput.click()">
+    <img [src]="ticketImage" alt="Upload Ticket" class="w-100" />
+
+    <input type="file" #fileInput (change)="handleImageUpload($event)" accept="image/*" hidden />
+  </div>
+} @else {
+  <div class="upload-dropzone" (click)="fileInput.click()">
+    <p>Drag & Drop your gym ticket here, or click to select an image.</p>
+    <input type="file" #fileInput (change)="handleImageUpload($event)" accept="image/*" hidden />
+  </div>
+}
