--- a/client/src/app/features/profile-2/profile-2.component.scss
+++ b/client/src/app/features/profile-2/profile-2.component.scss
@@ -21,11 +21,23 @@
   flex-direction: row;
   justify-content: space-between;
   gap: 1rem;
+  position: relative;
 
   img {
     height: 6rem;
     width: 6rem;
     border: 4px solid white;
+  }
+
+  #file-input {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 6rem;
+    height: 6rem;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 1000;
   }
 
   .profile-info {
